# ai-customer-service

./: .env.example  .gitignore  Dockerfile  README.md  blueprint.md  pyproject.toml  railway.toml  walkthrough.md.resolved
alembic/: alembic.ini  env.py
app/: __init__.py  config.py  dependencies.py  main.py
app/channels/: base.py  email_channel.py  instagram.py  simulator.py  twilio_whatsapp.py
app/models/: base.py  contact.py  conversation.py  escalation.py  lead.py  message.py  product_embedding.py
app/routes/: admin.py  simulator.py
app/routes/webhooks/: __init__.py  email.py  instagram.py  shopify.py  twilio.py
app/schemas/: nlp_message.py
app/services/: conversation_service.py  customer_service_engine.py  escalation_service.py  identity_service.py  intent_classifier.py  llm_service.py  orchestrator.py  rag_service.py  sales_engine.py  session_service.py  shopify_ingestion.py  shopify_service.py
app/tools/: __init__.py  lead_tools.py  registry.py  shopify_tools.py
app/utils/: error_handler.py  rate_limiter.py  signature_verify.py
scripts/: dev.py  ingest_shopify.py  setup_wizard.py
