[project]
name = "omnichannel-agent"
version = "0.1.0"
description = "AI-Powered Omnichannel Customer Service & Sales Agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.14",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "openai>=1.50",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.0",
    "tiktoken>=0.7",
    "beautifulsoup4>=4.12",
    "sendgrid>=6.11",
    "websockets>=12.0",
    "python-jose>=3.3",
    "twilio>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "factory-boy>=3.3",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "scripts*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require DB)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
